docs: add post /transactions to swagger docs
